fix bugs with images

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </section>
         <section id="contact">
             <div class="flex flex__center">
-                <img src="/assets/architecture-picture.png" alt="background">
+                <img src="../assets/architecture-picture.png" alt="background">
 
                 <h2 class="contact__title">Contact me</h2>
                 <p class="desc">Claritas est etiam processus dynamicus qui sequitur</p>
