--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <section class="video">
             <div class="container">
                 <span class="border-playbutton">
-                    <img src="/assets/angle-right@3x.png" alt="play-button" class="play-button">
+                    <img src="assets/angle-right@3x.png" alt="play-button" class="play-button">
                 </span>
             </div>
         </section>
